<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
		<relativePath/>
	</parent>
	<groupId>com.example</groupId>
	<artifactId>google-java-format-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>google-java-format-service</name>
	<description>Google Java Format Service</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.googlejavaformat</groupId>
			<artifactId>google-java-format</artifactId>
			<version>1.15.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>
						--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
						--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
						--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
						--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
						--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
					</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
